test/nexj/invalidbase/messages/XML_Invalid_NillableValue.message
<Message format="XML">
   <XMLMapping node="outer"/>
   <Parts>
      <Value name="val" type="string">
         <XMLMapping type="value" nillable="true"/>
      </Value>
   </Parts>
</Message>
